# theclaw

./: CMakeLists.txt  package.xml  setup.py
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  laser_config.yaml  local_costmap_params.yaml  mapper_params_online_async.yaml  theclaw_control.yaml
launch/: joystick.launch  lidar.launch  localization.launch  nav.launch  robot.launch  run_all.launch  run_joystick.launch  run_pc.launch  run_pi.launch  run_real.launch  run_sim.launch  rviz.launch  scan_matcher.launch  slam.launch
rviz/: main.rviz
scripts/: camera_pub.py  diffdrive.py  joycmd.py  pose2odom.py  state_machine.py  theclaw_node.py
src/: hw.cpp
src/theclaw/: main.py  navigation.py
urdf/: common_properties.xacro  omniplatform.urdf  theclaw.gazebo.xacro  theclaw.urdf  theclaw.urdf.xacro
urdf/meshes/: gripper_arm.stl
world/: test.world
