<?xml version="1.0"?>
<package format="2">
  <name>theclaw</name>
  <version>0.1.0</version>
  <description>THE CLAW package</description>

  <maintainer email="carbon@todo.todo">carbon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <!-- <exec_depend>rplidar_ros</exec_depend> -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>omniwheel</exec_depend> -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>laser_scan_matcher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>hector_mapping</exec_depend>

  <export>
  </export>
</package>
