<?xml version="1.0"?>
<package format="2">
  <name>theclaw</name>
  <version>0.1.0</version>
  <description>THE CLAW package</description>

  <maintainer email="carbon@todo.todo">carbon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>joy</depend>
  <!-- <depend>rplidar_ros</depend> -->
  <depend>move_base</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>rviz</depend>
  <depend>laser_scan_matcher</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>hector_mapping</depend>
  <depend>hardware_interface</depend>
  <depend>laser_filters</depend>
</package>
